# report

./: README.md  Untitled.ipynb  app.py  pyproject.toml
.ipynb_checkpoints/: Untitled-checkpoint.ipynb  app-checkpoint.py
mikan458A9336_TP_V4.jpg TensorFlow/: labels.txt  saved_model.pb  signature.json
mikan458A9336_TP_V4.jpg TensorFlow/variables/: variables.index
